# rassa

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci-ai.yml  ci-backend.yml  ci-frontend.yml
.turbo/cache/: f811b97fc01dcd75-manifest.json  f811b97fc01dcd75-meta.json  f811b97fc01dcd75.tar.zst
apps/admin/: eslint.config.js  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/ai-service/: Dockerfile  package.json  pyproject.toml
apps/ai-service/app/: main.py
apps/ai-service/app/api/v1/: cv.py
apps/ai-service/app/core/: config.py
apps/ai-service/app/document_processing/: cv_extractor.py
apps/ai-service/app/schemas/: cv.py
apps/ai-service/app/services/: cv_parser.py
apps/ai-service/app/services/cv/: __init__.py  prompts.py  schemas.py  service.py
apps/backend/: .eslintrc.js  eslint.config.js  jest.config.ts  package.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
apps/candidate-portal/: middleware.ts  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/company-portal/: .eslintrc.js  next.config.mjs  package.json  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
infra/: docker-compose.dev.yml  docker-compose.yml
infra/docker/: fastapi.Dockerfile  nestjs.Dockerfile  nginx.conf  (+1 more)
scripts/: download-models.sh  reset-local.sh  seed-mongo.ts  seed-qdrant.py
specs/: 20260514-init.md  20260603-cv-parse-endpoint.md  20260608-candidate-profile-endpoint.md
(+108 files in other folders)
