[project]
name = "ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "motor>=3.7.0",
    "redis>=5.2.0",
    "qdrant-client>=1.13.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.4.0",
    "anthropic>=0.49.0",
    "openai>=1.68.0",
    "google-genai>=1.3.0",
    "PyMuPDF>=0.25.0",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
